Fixed: Navigation bar overlaps with panels (#958)

--- a/src/styles/themes/proton/sidebar/bar.navigation.styl
+++ b/src/styles/themes/proton/sidebar/bar.navigation.styl
@@ -68,6 +68,7 @@
 .NavigationBar .main-items
   position: relative
   display: flex
+  min-height: var(--nav-btn-height)
   flex-wrap: wrap
   flex-grow: 1
   flex-direction: row
